e2e-tests/kubernetes/cassandra.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  labels:
    app: kafka-cqrs
spec:
  selector:
    app: kafka-cqrs
    service: cassandra
  ports:
  - name: cassandra-port
    protocol: TCP
    port: 9042
    targetPort: 9042
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafka-cqrs-cassandra
  labels:
    app: kafka-cqrs
    service: cassandra
spec:
  selector:
    matchLabels:
      app: kafka-cqrs
      service: cassandra
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-cqrs
        service: cassandra
    spec:
      containers:
      - name: kafka
        image: library/cassandra:3.11.3
        ports:
          - containerPort: 9042
#        command: ["/bin/bash","-c"]
#        args: ["echo AAA"]
