e2e-tests/kubernetes/debug.yaml
apiVersion: v1
kind: Service
metadata:
  name: debug
  labels:
    app: kafka-cqrs
spec:
  selector:
    app: kafka-cqrs
    service: debug
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafka-cqrs-debug
  labels:
    app: kafka-cqrs
    service: debug
spec:
  selector:
    matchLabels:
      app: kafka-cqrs
      service: debug
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-cqrs
        service: debug
    spec:
      containers:
      - name: debug
        image: library/busybox:1.29.2
        command: ["/bin/sh", "-c"]
        args: ["while true; do sleep 10000; done"]
        ports:
          - containerPort: 80
