e2e-tests/kubernetes/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka-cqrs
spec:
  selector:
    app: kafka-cqrs
    service: kafka-service
  ports:
  - name: zookeeper-service-port
    protocol: TCP
    port: 2181
    targetPort: 2181
  - name: kafka-service-port
    protocol: TCP
    port: 9092
    targetPort: 9092
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafka-cqrs-kafka-service
  labels:
    app: kafka-cqrs
    service: kafka-service
spec:
  selector:
    matchLabels:
      app: kafka-cqrs
      service: kafka-service
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-cqrs
        service: kafka-service
    spec:
      containers:
      - name: kafka-service
        image: spotify/kafka:latest
        ports:
          - containerPort: 9092
          - containerPort: 2181
