e2e-tests/kubernetes/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka-cqrs
spec:
  selector:
    app: kafka-cqrs
    service: kafka
  ports:
  - name: zookeeper-port
    protocol: TCP
    port: 2181
    targetPort: 2181
  - name: kafka-port
    protocol: TCP
    port: 9092
    targetPort: 9092
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafka-cqrs-kafka
  labels:
    app: kafka-cqrs
    service: kafka
spec:
  selector:
    matchLabels:
      app: kafka-cqrs
      service: kafka
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-cqrs
        service: kafka
    spec:
      containers:
      - name: kafka
        image: spotify/kafka:latest
        ports:
          - containerPort: 9092
          - containerPort: 2181
